# statistiques-impact

./: .gitignore  CHANGELOG.md  Procfile  README.md  TODO.md  cron.json  import_stock.py  index.ts  nodemon.json  package-lock.json  package.json  renovate.json  router.ts  tsconfig.json
django/: .env.example  Makefile  Procfile  cron.json  pyproject.toml  requirements.txt  schema.yml
django/config/: settings.py  urls.py
django/core/: __init__.py  admin.py  api_urls.py  factories.py  models.py  urls.py  views.py
django/core/adaptors/: __init__.py  base_adaptor.py  france_transfert.py  messagerie.py  posthog.py  proconnect.py  tchap.py  visio.py
django/core/api/: permissions.py  serializers.py  viewsets.py
django/core/clients/: __init__.py  client_base.py  datagouv.py  metabase.py  posthog.py
django/core/migrations/: 0001_initial.py  0002_alter_indicator_options_alter_product_options.py  0003_alter_indicator_options_alter_product_options.py  0004_product_slug.py  0004_productapikey.py  0005_alter_product_slug.py  0006_productapikey.py  0007_alter_indicator_options.py  0008_product_dataset_id.py  0009_indicator_created_at_indicator_updated_at.py  0010_alter_indicator_created_at.py  0011_adaptor.py  0011_alter_indicator_est_automatise_and_more.py  0012_adaptor.py  0012_alter_adaptor_last_successful_run.py  0012_rename_productid_adaptor_product_adaptor_created_at_and_more.py  0013_adaptor_url.py  0013_alter_adaptor_product.py  0014_indicator_slug_alter_adaptor_product.py  (+6 more)
django/cron_tasks/: apps.py  utils.py
django/docs/: envoi_de_fichiers.md  upload_fichier.md
(+233 files in other folders)
